# DZ_23_2

./: .env.sample  README.md  groups.json  pyproject.toml
blog/: views.py
blog/migrations/: 0001_initial.py
catalog/: admin.py  catalog_data.json  forms.py  models.py  services.py  urls.py  views.py
catalog/management/: settings.py
catalog/management/commands/: load_data.py
catalog/migrations/: 0001_initial.py  0002_product_manufactured_at.py  0003_remove_product_manufactured_at.py  0004_version.py  0005_product_owner.py  0006_alter_product_options_product_is_published.py
catalog/templates/catalog/: category_list.html  home.html
catalog/templates/catalog/includes/: inc_menu.html
config/: settings.py  urls.py
users/: admin.py  models.py  urls.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_user_token.py
