[tool.poetry]
name = "dz-19-2"
version = "0.1.0"
description = ""
authors = ["Maxim Poverenov <poverenov.92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
psycopg2-binary = "^2.9.9"
pillow = "^10.4.0"
ipython = "^8.26.0"
python-slugify = "^8.0.4"
pytils = "^0.4.1"
django = "4.2.2"
usersconfig = "^0.1.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
